# dai-pds-arm

./: .gitignore  .gitmodules  README.md  arm_errors.txt  dai-pds.code-workspace  requirements.txt
.devcontainer/: compose.yaml  devcontainer.json
.devcontainer/hooks/: postCreate.sh
scripts/: README.md  activate.sh  build.sh
src/arm2_description/: CMakeLists.txt  package.xml
src/arm2_description/meshes/: arm_1.stl  arm_2.stl  arm_3.stl  arm_4.stl  arm_5.stl  arm_6.stl  arm_7.stl  base_link.stl  hand.stl
src/arm2_description/urdf/: model.urdf
src/arm2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm2_moveit_config/config/: arm2.ros2_control.xacro  arm2.srdf  arm2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/arm3_description/: CMakeLists.txt  package.xml
src/arm3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_arduino_bridge/: package.xml  requirements.txt  setup.cfg  setup.py
src/arm_arduino_bridge/arm_arduino_bridge/: bridge.py  direct.py  interface.py
src/arm_arduino_bridge/launch/: ctrl.launch.py
src/arm_arduino_bridge/platformio/: .gitignore  platformio.ini
src/arm_arduino_bridge/platformio/include/: env.template.h  main.h
src/arm_arduino_bridge/platformio/lib/USBridge/: USBridge.cpp  USBridge.h
src/arm_arduino_bridge/platformio/scripts/: build.sh  checksum.sh
src/arm_arduino_bridge/platformio/src/: main.cpp
src/arm_description/: CMakeLists.txt  package.xml
src/arm_moveit_config/: .setup_assistant  package.xml
(+54 files in other folders)
