<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_arduino_bridge</name>
  <version>0.0.0</version>
  <description>Interface to Arduino controlling arm</description>
  <maintainer email="42513874+Interpause@users.noreply.github.com">J-H</maintainer>
  <license>License declaration</license>

  <exec_depend>topic_based_ros2_control</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
